Clean repository: remove dj_manager subdirectory and unrelated folders, configure Vercel for root directory

--- a/dj_manager/vercel.json
+++ b/dj_manager/vercel.json
@@ -4,6 +4,5 @@
   "outputDirectory": "dist",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "framework": "vite",
-  "rootDirectory": "dj_manager"
+  "framework": "vite"
 }
