--- a/dj_manager/dj_manager/vercel.json
+++ b/dj_manager/dj_manager/vercel.json
@@ -1,8 +1,1 @@
-{
-  "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "vite"
-}
+﻿{  "version": 2,  "buildCommand": "npm run build",  "outputDirectory": "dist",  "devCommand": "npm run dev",  "installCommand": "npm install",  "framework": "vite",  "rootDirectory": "dj_manager"}
