--- a/dj_manager/dj_manager/vercel.json
+++ b/dj_manager/dj_manager/vercel.json
@@ -1,1 +1,8 @@
-﻿{  "version": 2,  "buildCommand": "npm run build",  "outputDirectory": "dist",  "devCommand": "npm run dev",  "installCommand": "npm install",  "framework": "vite",  "rootDirectory": "dj_manager"}
+﻿{
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "framework": "vite"
+}
